# opensearch-orm

./: LICENSE  README.md  pyproject.toml
opensearchorm/: __init__.py  aggs.py  model.py  query.py  session.py  utils.py
