[tool.poetry]
name = "opensearch-orm"
version = "0.1.7"
description = ""
authors = ["yim7 <yimchiu7@gmail.com>"]
readme = "README.md"
packages = [{include = "opensearchorm"}]

[tool.poetry.dependencies]
python = "^3.7"
opensearch-py = "^2.0.0"
pytz = "^2022.2.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
